--- a/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
@@ -475,10 +475,12 @@ by_county_MMR <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_county) 
 
 county_group <- inner_join(by_county_medexempt, by_county_MMR, by = "school_county") %>%
   inner_join(by_county_exempt, by = "school_county") %>%
-  inner_join(by_county_nonmedexempt) %>%
   select(-c(students.x, schools.x, students.y, schools.y)) %>%
+  inner_join(by_county_nonmedexempt, "school_county") %>%
+  select(-c(students.x, schools.x)) %>%
+  rename(students= students.y) %>%
+  rename(schools = schools.y) %>%
   arrange(desc(students))
-
 
 
 names(county_group)
@@ -544,10 +546,13 @@ by_county_MMR_type <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_cou
 
 #merge county/type groups and sort by students enrolled
 
-county_group_type <- inner_join(by_county_medexempt_type, by_county_MMR_type, by = "school_county") %>%
-  inner_join(by_county_exempt_type, by = "school_county") %>%
-  inner_join(by_county_nonmedexempt_type) %>%
-  select(-c(students.x, schools.x, students.y, schools.y, school_type.y, school_type.x)) %>%
+county_group_type <- inner_join(by_county_medexempt_type, by_county_MMR_type, by = c("school_county", "school_type")) %>%
+  inner_join(by_county_exempt_type, by = c("school_county","school_type")) %>%
+  select(-c(students.x, schools.x, students.y, schools.y)) %>%
+  inner_join(by_county_nonmedexempt_type, by = c("school_county", "school_type")) %>%
+  select(-c(students.x, schools.x)) %>%
+  rename(students= students.y) %>%
+  rename(schools = schools.y) %>%
   arrange(desc(students))
 
 
@@ -557,7 +562,10 @@ summary(county_group_type)
 str(county_group_type)
 glimpse(county_group_type)
 
-  
+
+rm(by_county_exempt,by_county_exempt_type,by_county_medexempt,by_county_medexempt_type,by_county_MMR,by_county_MMR_type,by_county_nonmedexempt,by_county_nonmedexempt_type,by)
+
+
 
 ```
 
@@ -740,6 +748,12 @@ lm_y <- function(lin, x) {
 
 lm_y(linear_MMR_rate,5)
 lm_y(linear_nonmed_rate,5)
+
+# function to solve for x in y = mx + b, for a given x
+lm_x <- function(lin, y) {
+  return (coef(lin)[2] * x) + coef(lin)[1]
+  
+}
 
 
 ```
@@ -1064,31 +1078,24 @@ Bar plots using the county_group and county_group_type data frames.
 #aux.info <- vaccReported_NLT_100_NGT_2500 %>%  group_by(school_county) %>% summarize(Schools=n(), Students=sum(enrolled, na#.rm=TRUE)) %>% na.omit()
 #aux.info$Summary <- paste(aux.info$Schools, " Schools enrolling\n", aux.info$Students, " Students", sep="")
 
-
-
 ggplot(data= county_group_type, aes(y=mean_percent_exempt_MMR, x=reorder(school_county, students), fill = school_type)) +
   geom_bar(position="dodge",stat="identity") + 
-  coord_flip() 
-
-ggplot(data= county_group_type, aes(y=mean_percent_exempt_MMR, x=reorder(school_county, students), fill = school_type)) +
-  geom_bar(position="stack",stat="identity") + 
-  coord_flip()
+  coord_flip() +
+  xlab("County") +
+  theme(legend.position = c(.8,.8), legend.background = element_rect(color = "black", 
+    fill = "grey90", size = 1, linetype = "solid"), legend.direction = "vertical")
 
 ggplot(data= county_group_type, aes(y=mean_percent_exempt, x=reorder(school_county, students), fill = school_type)) +
-  geom_bar(position="stack",stat="identity") + 
-  coord_flip()
-
-
-
-
+  geom_bar(position="dodge",stat="identity") + 
+  coord_flip() +
+  xlab("County") +
+  theme(legend.position = c(.8,.8), legend.background = element_rect(color = "black", 
+    fill = "grey90", size = 1, linetype = "solid"), legend.direction = "vertical")
 ```
 
 Melting the county_group dataframe for additional bar plot visualizatons.  Melt is achieved by using gather() [tidyr package], where mean_percent_medical_exempt and mean_percent_nonmedexempt are gathered into exemption type, with each individual mean captured in mean_percent_exemption_type.
 
 ```{r echo = FALSE}
-
-
-
 
 # melt county group to get mean percent exemption by type
 melt_county_group <- gather(county_group,exemption_type,mean_percent_exemption_type,mean_percent_medical_exempt, mean_percent_nonmedexempt )
@@ -1120,70 +1127,74 @@ glimpse(melt_county_group)
 
 melt_county_group$labels <- paste(melt_county_group$schools, " Schools enrolling\n", melt_county_group$students, " Students", sep="")
 
-quantile(melt_county_group$mean_percent_exempt)
+
+fn_labels <- function(quartile){
+  return(unique(melt_county_group$labels[melt_county_group$mean_percent_exempt_quartile == quartile]))
+}
+
+#labels for each quartile
+
+labels_4 <- fn_labels(4)
+labels_3 <- fn_labels(3)
+labels_2 <- fn_labels(2)
+labels_1 <- fn_labels(1)
+
+#subset the data
+
+data_4 <- subset(melt_county_group, mean_percent_exempt_quartile == 4)
+data_3 <- subset(melt_county_group, mean_percent_exempt_quartile == 3)
+data_2 <- subset(melt_county_group, mean_percent_exempt_quartile == 2)
+data_1 <- subset(melt_county_group, mean_percent_exempt_quartile == 1)
 
 #plot each quartile and display in grid
-p1 = ggplot(data= subset(melt_county_group, mean_percent_exempt_quartile == 4), aes(y=mean_percent_exemption_type, x=school_county, fill = exemption_type)) +
-  geom_bar(position="stack",stat="identity") + 
-  coord_flip() #+
-  #annotate("text", x=seq(1, 10, 1), y=20, label=melt_county_group$labels[melt_county_group$mean_percent_exempt_quartile == 4], size=2.1)
-
-  
-p2 = p1 = ggplot(data= subset(melt_county_group, mean_percent_exempt_quartile == 3), aes(y=mean_percent_exemption_type, x=school_county, fill = exemption_type)) +
-  geom_bar(position="stack",stat="identity") + 
-  coord_flip()
-  
-p3 = p1 = ggplot(data= subset(melt_county_group, mean_percent_exempt_quartile == 2), aes(y=mean_percent_exemption_type, x=school_county, fill = exemption_type)) +
-  geom_bar(position="stack",stat="identity") + 
-  coord_flip()
-  
-p4 = p1 = ggplot(data= subset(melt_county_group, mean_percent_exempt_quartile == 1), aes(y=mean_percent_exemption_type, x=school_county, fill = exemption_type)) +
-  geom_bar(position="stack",stat="identity") + 
-  coord_flip()
-
-grid.arrange(p1,p2,p3,p4,ncol=1)
-
-#order by ?
-
-
-ggplot(data= subset(melt_county_group, mean_percent_exempt_quartile == 4), aes(y=mean_percent_exemption_type, x= reorder(school_county, -students), fill = exemption_type)) +
+p1 = ggplot(data= data_4, aes(y=mean_percent_exemption_type, x= reorder(school_county, students), fill = exemption_type)) +
   geom_bar(position="stack",stat="identity") + 
   coord_flip() +
-  annotate("text", x=seq(1, 10, 1), y=23, label=unique(melt_county_group$labels[melt_county_group$mean_percent_exempt_quartile == 4]), size=4) +
+  theme(legend.position = "none",legend.title=element_blank()) +
+  xlab("County") +
+  ylab("mean % exempt quartile 4")
+
+  
+p2 = ggplot(data_3, aes(y=mean_percent_exemption_type, x= reorder(school_county, students), fill = exemption_type)) +
+  geom_bar(position="stack",stat="identity") + 
+  coord_flip() +
+  theme(legend.position = "none",legend.title=element_blank()) +
+  xlab("County") +
+  ylab("mean % exempt quartile 3")
+  
+p3 = ggplot(data= data_2, aes(y=mean_percent_exemption_type, x= reorder(school_county, students), fill = exemption_type)) +
+  geom_bar(position="stack",stat="identity") + 
+  coord_flip() +
+  theme(legend.position = "none",legend.title=element_blank()) +
+  xlab("County") +
+  ylab("mean % exempt quartile 2")
+  
+p4 = ggplot(data= data_1, aes(y=mean_percent_exemption_type, x= reorder(school_county, students), fill = exemption_type)) +
+  geom_bar(position="stack",stat="identity") + 
+  coord_flip() +
+  theme(legend.position = "none",legend.title=element_blank()) +
+  xlab("County") +
+  ylab("mean % exempt quartile 1")
+
+grid.arrange(p1,p2,ncol=1)
+grid.arrange(p3,p4,ncol =1)
+grid.arrange(p1,p2,p3,p4, ncol=2)
+
+
+#order by students enrolled, so essentially the student population of each county
+
+
+ggplot(data= subset(melt_county_group, mean_percent_exempt_quartile == 4), aes(y=mean_percent_exemption_type, x= reorder(school_county, students), fill = exemption_type)) +
+  geom_bar(position="stack",stat="identity") + 
+  coord_flip() +
+  geom_text(aes(label = labels, y = 23)) +
   theme(legend.position = "top",legend.title=element_blank()) +
   geom_hline(y = 10, color = "red", size = 2) +
   geom_hline(y = 5, color = "red", size = 2)
 
-melt_county_group$students[melt_county_group$school_county == "WHATCOM"]
-
-melt_county_group$students[melt_county_group$school_county == "FERRY"]
-
-
-melt_county_group$students[melt_county_group$school_county == "SAN JUAN"]
-
-melt_county_group$students[melt_county_group$school_county == "STEVENS"]
 
 
 
-
-
-ggplot(data= subset(melt_county_group, mean_percent_exempt_quartile == 4), aes(y=mean_percent_exemption_type, x=school_county, fill = exemption_type)) +
-  geom_bar(position="stack",stat="identity") + 
-  coord_flip() +
-  annotate("text", x=seq(1, 10, 1), y=23, label=unique(melt_county_group$labels[melt_county_group$mean_percent_exempt_quartile == 4]), size=4) +
-  theme(legend.position = "top",legend.title=element_blank()) +
-  geom_hline(y = 10, color = "red", size = 2) +
-  geom_hline(y = 5, color = "red", size = 2)
-
-test <- subset(melt_county_group, mean_percent_exempt_quartile == 4)
-
-
-
-unique(test$schools)
-unique(test$labels)
-
-geom_polygon(data = dat2, aes(y = bgl, 
-    group = group), alpha = 0.3) +facet_wrap(~id)
 
 ```
 
